--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <input type="text" id="phone" placeholder="Phone number" required>
     <input type="text" id="subject" placeholder="Subject" required>
     <textarea id="message" rows="4" placeholder="Make your request" required></textarea>
-    <button type="submit" onclick="sendMail()">Send</button>
+    <button type="submit">Send</button>
 </form>
     </div>
 
